force-app/main/default/objects/KCSArticle_ka__c.object
<CustomObject>
    <description>Used by Service Analytics v6+ Analytics App install. Do not remove.</description>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>ArticleNumber</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseAssociationCount__c</fullName>
        <label>CaseAssociationCount</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate__c</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstPublishedDate__c</fullName>
        <label>FirstPublishedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPublishedDate__c</fullName>
        <label>LastPublishedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>KCSArticle_ka__c</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>KCSArticle_ka Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KCSArticle_ka__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>